Issue #323: Changed when the viz icon is displayed on the legend

--- a/infomapper/src/app/map-components/map.component.html
+++ b/infomapper/src/app/map-components/map.component.html
@@ -154,12 +154,12 @@
                                     [disabled]="true"
                                     [hidden]="geoLayerView.eventHandlers | menuDisable: 'vizCheck'">
                               <!-- For displaying a graph looking icon in the layer control -->
-                              <mat-icon matTooltip="Click on features for this layer for data visualizations"
+                              <mat-icon matTooltip="Click on features for this layer for data visualization"
                                         [matTooltipShowDelay]="750">
                                 timeline
                               </mat-icon>
                               <!-- For displaying a hand pressing a button in the layer control -->
-                              <!-- <mat-icon matTooltip="Click on features for this layer for data visualizations"
+                              <!-- <mat-icon matTooltip="Click on features for this layer for data visualization"
                                         [matTooltipShowDelay]="750">
                                 touch_app
                               </mat-icon> -->
