--- a/infomapper/src/app/map-components/map.component.html
+++ b/infomapper/src/app/map-components/map.component.html
@@ -437,7 +437,9 @@
                     </div>
                   </div>
                 </div>
-
+                <!-- Test code for using an Angular library -->
+                <!-- <lib-ng-test-lib item="/test/path.txt"></lib-ng-test-lib> -->
+                <!-- <lib-ng-test-lib [item]="pathVariable"></lib-ng-test-lib> -->
               </ng-template>
               
             </div>
