Updated code for the new data table library code

--- a/infomapper/src/app/map-components/map.component.css
+++ b/infomapper/src/app/map-components/map.component.css
@@ -8,7 +8,7 @@ button.mat-menu-item {
   outline: none;
   /* Overrides the width of the button in the menu. otherwise the default max-width is quite short, and will cut off
   even a short name of the button, such as 'Data Table' */
-  width: 170px !important;
+  width: 190px !important;
 }
 
 /* Changes the amount of pixels surrounding the <hr> divider class that separates each geoLayerView in the side bar */
@@ -92,6 +92,12 @@ table.layerOptions {
 
 .control-symbol-divider {
   margin: 0px 0px 4px 0px;
+}
+
+/*  */
+.fa-building {
+  vertical-align: middle;
+  padding-right: 7%;
 }
 
 /*  */
