--- a/infomapper/src/app/map-components/map.component.html
+++ b/infomapper/src/app/map-components/map.component.html
@@ -216,6 +216,16 @@
                                 <i class="fa fa-dot-circle-o fa-2x"></i>
                                 Clear Selection
                               </button>
+                              
+                              <!-- <button mat-menu-item
+                                      class="menu-button"
+                                      (click)="findFromAddress(geoLayerView.geoLayerId)"
+                                      matTooltip="Zoom to coordinates of an address"
+                                      matTooltipPosition="after"
+                                      matTooltipShowDelay="750">
+                                <i class="fa fa-building fa-2x"></i>
+                                Find From Address
+                              </button> -->
                             </mat-menu>
 
                           </div>
