--- a/infomapper/src/app/content-page/content-page.component.html
+++ b/infomapper/src/app/content-page/content-page.component.html
@@ -1,9 +1,12 @@
 <div *ngIf="markdownFilePresent === true;">
   <!-- The global Showdown container that users can change to different font types, sizes, etc. -->
   <div [ngClass]="browserWidth > 500 ? 'showdown-container' : 'showdown-container-mobile'">
-    <showdown [value]="showdownHTML" [options]="showdownOptions" class="markdown-div"></showdown>
+    <div class="inner-container">
+      <showdown [value]="showdownHTML" [options]="showdownOptions" class="markdown-div"></showdown>
+    </div>
   </div>
 </div>
+
 <div *ngIf="markdownFilePresent === false">
   <div class="text-center">
     <h1 class="main-header-404">404</h1>
